@@ -10,4 +10,3 @@ install_tool = eumm
 remove = ExtUtils::CBuilder
 [OnlyCorePrereqs]
 starting_version = 5.008003
-skip = Perl::OSType
