@@ -2,6 +2,7 @@ Revision history for ExtUtils-HasCompiler
 
 {{$NEXT}}
           Prefer environmental variables over configuration (experimental)
+          Get rid of Perl::OSType dependency
 
 0.002     2015-04-19 19:18:10+02:00 Europe/Amsterdam
           Switch to ExtUtils::MakeMaker
